--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ Testing
 
 # clion cmake builds
 cmake-build-debug
+cmake-build-debug-visual-studio
 cmake-build-release
+cmake-build-release-visual-studio
 cmake-build-relwithdebinfo
 packaging/Output/*
